--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,17 +7,17 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
     <application
-        android:name=".adapters.VolleyAdapter"
+        android:name="com.chris.app.coffee.adapters.VolleyAdapter"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:logo="@drawable/logo"
+        android:theme="@style/AppTheme"
+        android:label="@string/app_name">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name="com.chris.app.coffee.MainActivity">
+            <!--android:label="@string/app_name">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -39,11 +39,6 @@
             android:name="com.facebook.FacebookContentProvider"
             android:authorities="com.facebook.app.FacebookContentProvider1234"
             android:exported="true" />
-
-        <activity
-            android:name=".models.SavingView"
-            android:label="@string/title_activity_saving_view"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
